--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
        </header>
 
     <main>
+        <!-- Our features Section  -->
         <section class=" teams display-flex">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="">
@@ -42,8 +43,8 @@
                  <img src="images/team4.png" alt="">
            </div>
            <div class="our-features">
-              <h3 class="feature-tittle"><span id="quick-list" class="text-light-gray">Quick list</span><span> of Our</span><span>Features</span> </h3>
-              <p class="feature-description">There are many variations of passages 
+              <h3 class="section-tittle"><span id="quick-list" class="text-light-gray">Quick list</span><span> of Our </span><span class="text-primary">Features</span> </h3>
+              <p class="feature-description text-light-gray">There are many variations of passages 
                 of Lorem Ipsum available, but the majority have suffered alteration
                  in some form, by injected humour, or randomised words which don't
                   look even
@@ -51,6 +52,46 @@
               <Button class="btn-primary">Explore More</Button>
             </div>
         </section>
+        <!-- Features you will love & enjoy  -->
+         <section>
+            
+         </section>
+         <!-- Some Facts  -->
+          <section>
+            <h3 class="section-tittle">Some facts</h3>
+            <p class="text-light-gray">
+                There are many variations of passages of Lorem Ipsum available, 
+                but the majority have suffered alteration.
+            </p>
+            <div class="facts-container">
+                <!-- .fact*4>img+h4-number+h5.fact-name -->
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+                <div class="fact">
+                    <img src="" alt="">
+                    <h4 class="fact-number"></h4>
+                    <h5 class="fact-name"></h5>
+                </div>
+            </div>
+          </section>
+          <!-- Our Sponspors  -->
+           <section>
+
+           </section>
+
      </main>
 </body>
 </html>
