--- a/index.html
+++ b/index.html
@@ -53,8 +53,46 @@
             </div>
         </section>
         <!-- Features you will love & enjoy  -->
-         <section>
-            
+         <section class="features display-flex">
+            <div>
+               <h3 id="feature-section-tittle" class="section-tittle">Features you will <br> love & enjoy</h3>
+               <p class="text-light-gray">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
+                 or randomised words which don't look even
+               </p>
+               <!-- feature card -->
+                <div class="feature-card">
+                    <h3 class="section-tittle1">Dexktop & Mobile Version</h3>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                         by injected humour, or randomised.
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h3 class="section-tittle1">Dexktop & Mobile Version</h3>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+                         by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h3 class="section-tittle1">Dexktop & Mobile Version</h3>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                        by injected humour, or randomised...........
+                    </p>
+                </div>
+                <div class="feature-card">
+                    <h3 class="section-tittle1">Dexktop & Mobile Version</h3>
+                    <p class="section-description">
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, 
+                        by injected humour, or randomised...........
+                    </p>
+                </div>
+            </div>
+             <div>
+                <img src="images/architect.png" alt="">
+             </div>
          </section>
          <!-- Some Facts  -->
           <section>
